# serial-stamp

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  gui.py  main.py  pyproject.toml
.github/workflows/: ci.yml
apps/serial-stamp-desktop/: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/serial-stamp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/serial-stamp-desktop/src-tauri/src/: lib.rs
apps/serial-stamp-desktop/src/lib/: MenuController.svelte
apps/serial-stamp-desktop/src/lib/components/: AccordionGroup.svelte  AccordionSection.svelte  AppLayout.svelte  LayoutEditor.svelte  PreviewPanel.svelte  Sidebar.svelte  TextEditor.svelte
apps/serial-stamp-desktop/src/lib/components/forms/: Button.svelte  ColorInput.svelte  GapInput.svelte  GridSizePicker.svelte  GridSizeSelector.svelte  IconButton.svelte  Input.svelte  MarginInput.svelte  NumberInput.svelte  SegmentedControl.svelte  (+3 more)
apps/serial-stamp-desktop/src/lib/icons/: ChevronIcon.svelte  GridIcon.svelte
apps/serial-stamp-desktop/src/lib/spec/: spec.ts
apps/serial-stamp-desktop/src/lib/state/: resources.svelte.ts  spec.svelte.ts  workspace.svelte.ts
apps/serial-stamp-desktop/src/lib/themes/: README.md  THEME_SWITCHER_EXAMPLE.md  theme.css  themes.ts
apps/serial-stamp-desktop/src/routes/: +layout.svelte  +page.svelte
docs/: CLI_GUIDE.md
scripts/: legacy_ticket_number.py
serial_stamp/: cli.py  engine.py  gui.py  models.py  project.py  utils.py
serial_stamp/ui/: __init__.py  app.py  forms.py  panels.py
tests/: __init__.py  test_utils.py
tiknum/: engine.py  utils.py
