[project]
name = "serial-stamp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic>=2.11.7",
]

[[project.authors]]
name = "Natoandro"

[project.scripts]
serial-stamp = "serial_stamp.cli:main"
serial-stamp-gui = "serial_stamp.gui:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
