[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serial-stamp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic>=2.11.7",
    "tomli-w>=1.0.0",
]

[[project.authors]]
name = "Natoandro"

[project.scripts]
serial-stamp = "serial_stamp.cli:main"
serial-stamp-gui = "serial_stamp.gui:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-Pillow",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["serial_stamp"]
